--- a/portfolio2016/index.html
+++ b/portfolio2016/index.html
@@ -84,7 +84,7 @@
                 </div>
             </div> -->
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-xs-4 col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -94,7 +94,7 @@
                         <img src="img/portfolio/j2.png" class="img-thumbnail" alt="" />
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-xs-4 col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -104,7 +104,7 @@
                         <img src="img/portfolio/w2.png" class="img-thumbnail" alt="" />
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-xs-4 col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
