SP用ボタンサイズ変更とヒストリーの修正

--- a/portfolio2016/index.html
+++ b/portfolio2016/index.html
@@ -170,18 +170,9 @@
                             <h2>Website</h2>
                             <hr class="star-primary">
                             <!-- hc -->
-                            <a href="http://www.fillico.com/top/jw/museum.html" target="-blank"><img src="img/portfolio/gm.png" class="img-responsive img-centered" alt="humancounter"></a>
+                            <a href="http://grienmonster.com/" target="-blank"><img src="img/portfolio/gm.png" class="img-responsive img-centered" alt="humancounter"></a>
                             <ul class="list-inline item-details">
                                 <li>Date: <strong>apl 2014</strong>
-                                </li>
-                                <li>Lang: <strong>HTML,CSS,Javascript</strong>
-                                </li>
-                                <li>Framework: <strong>Twitter Bootstrap</strong>
-                                </li>
-                            </ul>
-                            <a href="http://www.fillico.com/top/jw/museum.html" target="-blank"><img src="img/portfolio/fm.png" class="img-responsive img-centered" alt="humancounter"></a>
-                            <ul class="list-inline item-details">
-                                <li>Date: <strong>jun 21, 2015</strong>
                                 </li>
                                 <li>Lang: <strong>HTML,CSS,Javascript</strong>
                                 </li>
@@ -295,34 +286,51 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>iOS App</h2>
+                            <h2>Job Histry</h2>
                             <hr class="star-primary">
-                            <a href="https://itunes.apple.com/jp/app/yan-yenishimasen/id469367856?mt=8" target="_blank">
-                            <img src="img/portfolio/noword.png" class="img-responsive img-centered" alt="">
-                            </a>
-                            <h3>言葉にしません</h3>
-                            <p>見づ知らずの人に、ちょっとした親切心で 教えてあげたい、伝えてあげたいことってあると思います。 でも私たち日本人は積極的な人ばかりではないので 「言うほどのことでもないかな」 と心の中で流してしまうケースも しばしば。 言う、伝える、だけではなく、スマートフォンの画面の大きさを 生かした第3の意思伝達手段として使用して頂けると幸いです。</p>
+                            <h3>現在</h3>
+                            <p></p>
                             <ul class="list-inline item-details">
-                                <li>Date: <strong>Jun 28, 2012</strong>
-                                </li>
-                                <li>Version: <strong>2.0</strong>
-                                </li>
-                                <li>Plice: <strong>Free</strong>
+                                <li>Date: <strong>20015年2月</strong>
                                 </li>
                             </ul>
-                            <a href="https://itunes.apple.com/app/humancounter/id443071739?mt=8" target="_blank">
-                            <img src="img/portfolio/hc.png" class="img-responsive img-centered" alt="">
-                            </a>
-                            <h3>HUMANCOUNTER</h3>
-                            <p>現実に目の前を通過する男女の数を競う単純ゲーム。 人の集まる交差点などで友達と勝負すると直ちに盛り上がります!!(絶対)</p>
+                            <h3>A社入社</h3>
+                            <p>インターネットを使って物を売る部署。ECサイトの更新、メルマガ配信など。</p>
                             <ul class="list-inline item-details">
-                                <li>Date: <strong>Jun 28, 2012</strong>
-                                </li>
-                                <li>Version: <strong>2.0</strong>
-                                </li>
-                                <li>Plice: <strong>Free</strong>
+                                <li>Date: <strong>2014年11月→現在</strong>
                                 </li>
                             </ul>
+                            <h3>ワーキングホリデーを利用してカナダへ</h3>
+                            <p>前職でテクノロジーの進化スピードに魅了され、英語で直接理解しないと間に合わないと気が付き語学留学</p>
+                            <ul class="list-inline item-details">
+                                <li>Date: <strong>2013年6月→2014年6月</strong>
+                                </li>
+                            </ul>
+                            <h3>帝京システム</h3>
+                            <p>WebDesign iphoneApp作成など</p>
+                            <ul class="list-inline item-details">
+                                <li>Date: <strong>2011年3月→2013年4月</strong>
+                                </li>
+                            </ul>
+                            <h3>有限会社サンプロ</h3>
+                            <p>シルクスクリーン印刷</p>
+                            <ul class="list-inline item-details">
+                                <li>Date: <strong>2010年6月→2010年11月</strong>
+                                </li>
+                            </ul>
+                            <h3>株式会社ディスクユニオン</h3>
+                            <p>販売促進</p>
+                            <ul class="list-inline item-details">
+                                <li>Date: <strong>2007年3月→2009年10月</strong>
+                                </li>
+                            </ul>
+                            <h3>株式会社ヴェント・インターナショナル</h3>
+                            <p>商品管理</p>
+                            <ul class="list-inline item-details">
+                                <li>Date: <strong>2005年4月→2007年2月</strong>
+                                </li>
+                            </ul>
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -342,9 +350,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Illust</h2>
+                            <h2>Hobby</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/art.svg" class="img-responsive img-centered" alt="">
                             <h4>Sorry Not yet...Comeing soon...</h4>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
