--- a/portfolio2016/index.html
+++ b/portfolio2016/index.html
@@ -53,8 +53,8 @@
                     <li class="page-scroll">
                         <a href="#about"></a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Histry</a>
+                    <li>
+                        <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">Job Histry</a>
                     </li>
                 </ul>
             </div>
@@ -289,47 +289,31 @@
                             <h2>Job Histry</h2>
                             <hr class="star-primary">
                             <h3>現在</h3>
-                            <p></p>
-                            <ul class="list-inline item-details">
-                                <li>Date: <strong>20015年2月</strong>
-                                </li>
-                            </ul>
+                            <p>Date: <b>20015年2月</b></p>
+                            <p><b>↑</b></p>
                             <h3>A社入社</h3>
+                            <p>Date: <b>2014年11月→現在</b></p>
                             <p>インターネットを使って物を売る部署。ECサイトの更新、メルマガ配信など。</p>
-                            <ul class="list-inline item-details">
-                                <li>Date: <strong>2014年11月→現在</strong>
-                                </li>
-                            </ul>
+                            <p><b>↑</b></p>
                             <h3>ワーキングホリデーを利用してカナダへ</h3>
+                            <p>Date: <b>2013年6月→2014年6月</b></p>
                             <p>前職でテクノロジーの進化スピードに魅了され、英語で直接理解しないと間に合わないと気が付き語学留学</p>
-                            <ul class="list-inline item-details">
-                                <li>Date: <strong>2013年6月→2014年6月</strong>
-                                </li>
-                            </ul>
+                            <p><b>↑</b></p>
                             <h3>帝京システム</h3>
+                            <p>Date: <b>2011年3月→2013年4月</b></p>
                             <p>WebDesign iphoneApp作成など</p>
-                            <ul class="list-inline item-details">
-                                <li>Date: <strong>2011年3月→2013年4月</strong>
-                                </li>
-                            </ul>
+                            <p><b>↑</b></p>
                             <h3>有限会社サンプロ</h3>
+                            <p>Date: <b>2010年6月→2010年11月</b></p>
                             <p>シルクスクリーン印刷</p>
-                            <ul class="list-inline item-details">
-                                <li>Date: <strong>2010年6月→2010年11月</strong>
-                                </li>
-                            </ul>
+                            <p><b>↑</b></p>
                             <h3>株式会社ディスクユニオン</h3>
+                            <p>Date: <b>2007年3月→2009年10月</b></p>
                             <p>販売促進</p>
-                            <ul class="list-inline item-details">
-                                <li>Date: <strong>2007年3月→2009年10月</strong>
-                                </li>
-                            </ul>
+                            <p><b>↑</b></p>
                             <h3>株式会社ヴェント・インターナショナル</h3>
+                            <p>Date: <b>2005年4月→2007年2月</b></p>
                             <p>商品管理</p>
-                            <ul class="list-inline item-details">
-                                <li>Date: <strong>2005年4月→2007年2月</strong>
-                                </li>
-                            </ul>
 
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -352,7 +336,28 @@
                         <div class="modal-body">
                             <h2>Hobby</h2>
                             <hr class="star-primary">
-                            <h4>Sorry Not yet...Comeing soon...</h4>
+                            <ul class="hobby">
+                                <li>雑誌を買って読む事</li>
+                                <li>本を買う事</li>
+                                <li>本屋に行った後Kindleで本を買う</li>
+                                <li>NETFLIXでドラマを見る事</li>
+                                <li>早起きの為のライフハックを試す</li>
+                                <li>アボカド料理をクックパッドで探す</li>
+                                <li>昔のスケートカルチャーからインスピレーションを受ける。</li>
+                                <li>昔のパンクからインスピレーションを受ける</li>
+                                <li>モバイルで出来ることをはモバイルでする</li>
+                                <li>IFTTTでレシピを作るか誰かが作ったレシピをカスタマイズして動いた時の感動</li>
+                                <li>ペンとメモ帳をもって出かける</li>
+                                <li>エバーノートを整理する</li>
+                                <li>グーグルが何かを発表した時まず英語で理解しようと動画を見る</li>
+                                <li>新しいNEXUSが出そうな予感がしてきた時</li>
+                                <li>WIREDマガジンを買って（フィジカル）デジタルで読む</li>
+                                <li>dribbbleを見ている時間</li>
+                                <li>誰かがブログで紹介した商品をAMAZONで買う</li>
+                                <li>AMAZONで買った何かが届く日</li>
+                                <li>脱プラスチックの人のブログが更新された時、読む</li>
+                                <li>音楽を聴く</li>
+                            </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
